# BANKFLEE

./: .gitignore  ASSETS.md  DESIGN_PLATFORMER.md  README.md  game.js  index.html  manifest.json  package-lock.json  package.json  style.css  tauri.conf.json
assets/: README.md
levels/: level1.json  level2.json
src/: main.js
src-tauri/: Cargo.toml
src/engine/: assets.js  audio.js  input.js  storage.js
src/game/: camera.js  constants.js  entities.js  platformer.js  player.js  tilemap.js  topdown.js
